Git remote set auf eigenen User

--- a/RAG-and-embeddings.ipynb
+++ b/RAG-and-embeddings.ipynb
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1386,6 +1386,17 @@
       "8. **Benutze elektronische Hilfsmittel**: Die Hochschule kann Bachelorarbeiten mit elektronischen Hilfsmitteln auf Plagiate überprüfen. Stelle sicher, dass du deine Arbeit sorgfältig überprüfst, bevor du sie einreichst.\n",
       "\n",
       "Indem du diese Schritte befolgst, kannst du sicherstellen, dass du Plagiate in deiner Bachelorarbeit vermeidest und eine originale, wissenschaftliche Arbeit erstellst.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mDer Kernel ist beim Ausführen von Code in der aktuellen Zelle oder einer vorherigen Zelle abgestürzt. \n",
+      "\u001b[1;31mBitte überprüfen Sie den Code in der/den Zelle(n), um eine mögliche Fehlerursache zu identifizieren. \n",
+      "\u001b[1;31mKlicken Sie <a href='https://aka.ms/vscodeJupyterKernelCrash'>hier</a>, um weitere Informationen zu erhalten. \n",
+      "\u001b[1;31mWeitere Informationen finden Sie unter Jupyter <a href='command:jupyter.viewOutput'>Protokoll</a>."
      ]
     }
    ],
